feat: Attribute schemas with JSONSchema (#448)
* Attribute schemas with JSONSchema


* handle incomplete requests


* Addressed reviews


* add git store support


* Address reviews


* Fix disk.NewFromIndex causing internal server error


* unit tests


* Addressed reviews


* Added docs


* pass ctx and use tracing


* fix an error handling problem and add new test cases


* Add test for schema.Manager.Validate


* tests


* Addressed some reviews
