# api/genpb/cerbos/engine/v1/engine.pb.validate.go
@@ -199,6 +199,21 @@ func (m *CheckOutput) Validate() error {
 
 	}
 
+	for idx, item := range m.GetValidationErrors() {
+		_, _ = idx, item
+
+		if v, ok := interface{}(item).(interface{ Validate() error }); ok {
+			if err := v.Validate(); err != nil {
+				return CheckOutputValidationError{
+					field:  fmt.Sprintf("ValidationErrors[%v]", idx),
+					reason: "embedded message failed validation",
+					cause:  err,
+				}
+			}
+		}
+
+	}
+
 	return nil
 }
 
